force-app/main/default/objects/Account/fields/Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Number__c</fullName>
    <displayFormat>C-{0000}</displayFormat>
    <label>Client Number</label>
    <type>AutoNumber</type>
</CustomField>