force-app/main/default/objects/Account/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>200</length>
    <type>Text</type>
</CustomField>