force-app/main/default/objects/Account/fields/Display_On_Job_Posting__c.field-meta.xml
<CustomField>
    <fullName>Display_On_Job_Posting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display On Job Posting</label>
    <type>Checkbox</type>
</CustomField>