force-app/main/default/objects/Account/fields/IFSC_Code_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>IFSC_Code_Routing_Number__c</fullName>
    <label>IFSC Code/Routing Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>