force-app/main/default/objects/Account/fields/Vendor_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Number__c</fullName>
    <displayFormat>V-{0000}</displayFormat>
    <label>Vendor Number</label>
    <type>AutoNumber</type>
</CustomField>