force-app/main/default/objects/Account/listViews/All_Clients.listView-meta.xml
<ListView>
    <fullName>All_Clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Client_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Type_of_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_Account__c</field>
        <operation>equals</operation>
        <value>Client</value>
    </filters>
    <label>All Clients</label>
</ListView>