force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Type_of_Account__c</columns>
    <columns>Account_Type__c</columns>
    <columns>Bank_Name__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_Account__c</field>
        <operation>contains</operation>
        <value>Client</value>
    </filters>
    <filters>
        <field>Account_Type__c</field>
        <operation>contains</operation>
        <value>Vendor</value>
    </filters>
    <label>All Accounts</label>
</ListView>