force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Account_Type__c</columns>
    <columns>Type_of_Account__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Account_Type__c</field>
        <operation>equals</operation>
        <value>Vendor</value>
    </filters>
    <filters>
        <field>Type_of_Account__c</field>
        <operation>equals</operation>
        <value>Client</value>
    </filters>
    <label>My Accounts</label>
</ListView>